New sigma-clipped mean and median filters for Arithmetic
The Arithmetic program now has two new filters: `filter-sigclip-mean' and
`filter-sigclip-median'. They can be used to remove strong outliers in the
filter before estimating the mean or median.

Arithmetic's filtering operators were also measuring the filter on blank
elements (in the input). This is not desired: a blank element in the input
should also be blank in the output. So a check was added to each pixel
before the filter is measured for it.

While trying to ignore blank pixels, I noticed that we don't have a simple
function to check a single value to see if its blank or not. So a new
function was defined for this job: `gal_blank_is'.

In the process, I also noticed that when using `gal_blank_remove' or
`gal_statistics_no_blank_sorted', we weren't checking for the case that all
the input pixels are blank. All occurances of these two functions now check
for this.

--- a/NEWS
+++ b/NEWS
@@ -5,11 +5,15 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  Arithmetic:
+    - filter-sigclip-mean: sigma-clipped, mean filter operator.
+    - filter-sigclip-median: sigma-clipped, median filter operator.
+
   ConvertType:
     - TIFF images can also be used as input.
 
   MakeCatalog:
-    --variance: input STD image is variance (so take square root before use).
+    --variance: input standard deviation image is actually variance.
     --brightnesserr: error in estimating the brightness.
     --mean: calculate the mean pixel value within an object or clump.
     --median: calculate the median pixel value within an object or clump.
@@ -24,6 +28,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Libraries:
     gal_array_read: read array from any of known formats (FITS,TIFF,JPEG,...).
     gal_array_read_to_type: similar to `gal_array_read', but to given type.
+    gal_blank_is: check to see if argument is blank in its type or not.
     gal_eps_name_is_eps: Returns 1 if given filename is EPS.
     gal_eps_suffix_is_eps: Returns 1 if given suffix is EPS.
     gal_eps_to_pt: Converts dataset size to PostScript points.
