All statistics function check input's size
Until now, most functions in the statistics library had no check for when
the input's size is zero. Therefore a test has been added for all the
functions to respond reasonably when this happens (instead of crashing or
giving strange results).

This fixes bug #53424.

--- a/NEWS
+++ b/NEWS
@@ -91,6 +91,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #53304: NoiseChisel crash when there is no detection.
   bug #53312: Fits crash on keyword editing (except --delete).
   bug #53407: Instrumental noise in MakeNoise should be squared.
+  bug #53424: Sigma-clipping seg-faults when there are no more elements.
 
 
 
