Arithmetic can now find the connected components of input
Thanks to the library, adding this new operator was very
straightforward. With it, it is easily possible to produce labeled images
when a simple threshold is enough for a detection problem. These labeled
images can then be fed into Segment for segmentation or MakeCatalog for
higher-level analysis.

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     - Segment: new program in charge of segmentation over detections.
 
   Arithmetic:
+    - connected-components: label the connected elements of the input.
     - filter-sigclip-mean: sigma-clipped, mean filter operator.
     - filter-sigclip-median: sigma-clipped, median filter operator.
 
