Arithmetic only reads the headers when necessary
Some file formats (like JPEG) don't need any headers. Therefore Arithmetic
will not attempt to assign them a HDU and will instead pass a NULL pointer
to their HDU element (as it should be).

Also, I found out that the `addcounter' element in Arithmetic's main
structure was extra and no longer used. So it was removed.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -21977,6 +21977,11 @@ library, for example @ref{FITS files} or @ref{TIFF files}. If the file type
 of the input/output file is already known, you can use the functions in
 those sections respectively.
 
+@deftypefun int gal_array_name_recognized (char @code{*filename})
+Return 1 if the given file name corresponds to one of the recognized file
+types for reading arrays.
+@end deftypefun
+
 @deftypefun gal_data_t gal_array_read (char @code{*filename}, char @code{*extension}, size_t @code{minmapsize})
 Read the array within the given extension (@code{extension}) of
 @code{filename}. If the array is larger than @code{minmapsize} bytes, then
