--- a/NEWS
+++ b/NEWS
@@ -142,6 +142,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #53312: Fits crash on keyword editing (except --delete).
   bug #53407: Instrumental noise in MakeNoise should be squared.
   bug #53424: Sigma-clipping seg-faults when there are no more elements.
+  bug #53580: Warp crash when no WCS present.
 
 
 
