Correction touches to NoiseChisel, Segment and MakeCatalog
This commit started with correcting the General program usage tutorial for
the new NoiseChisel, Segment and MakeCatalog programs. However, as I made
progress, I noticed some issues in all three programs that needed to be
corrected/added. Here is a short summary of the major corrections/changes
for each program.

 - NoiseChisel: The default outout is now an 8-bit binary detection image
   (to be fed into Segment). So it has a new `--label' option to mark
   connected components.

 - NoiseChisel: The default `--detgrowquant' option was increased to
   `0.80'. `0.7' was good for the example mock image produced in `make
   check', but on real datasets, it may be too much.

 - MakeCatalog: By default the clumps catalog will also be sorted by object
   ID. The new `--noclumpsort' option can be used to avoid this sorting
   (after all, it takes some processing power).

 - MakeCatalog: No more complaints about clump-specific columns if `--ids'
   is used only for an objects catalog.

 - MakeCatalog and Segment: If a Sky or Sky STD file aren't given, it will
   look into the values file (if given), then the objects file (main input
   argument).

 - MakeCatalog and Segment: Like MakeCatalog, the Sky and its STD can also
   be given as values (not just datasets).

 - Segment: error can also be given as variance.

--- a/NEWS
+++ b/NEWS
@@ -32,9 +32,12 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     the values file, but the object labels file. Please see the
     "MakeCatalog inputs and basic settings" section of the book for
     more. Here is the summary of the the options:
+    --insky: Sky value as a single value or file (dataset).
+    --instd: Sky standard deviation as a single value or file (dataset).
     --valuesfile: filename containing the values dataset.
     --valueshdu: HDU/extension containing the values dataset.
     --clumpscat: Make a clumps catalog also (`WCLUMPS' keyword not used anymore).
+    --noclumpsort: Don't sort the clumps catalog by host object ID.
     --subtractsky: Subtract the given Sky from the values dataset.
     --variance: input standard deviation image is actually variance.
     --checkupperlimit: make a table for random positions and measurements.
@@ -49,6 +52,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   NoiseChisel:
     --rawoutput: only output the detection labels and Sky and its STD.
+    --label: label the connected detections. Until now this was the default
+      behavior. However, from this release, NoiseChisel is only in charge
+      of detection. Segmentation is done by a new program (Segment). Since
+      detection is ultimately just a binary operator, the default output
+      now has an 8-bit unsigned integer type with values of 0 or 1. With
+      this option, you can ask for it to label/count the connected
+      detections instead of the default binary output.
 
   Statistics:
     --manualbinrange: histogram or CFP range can be outside of distribution.
@@ -98,8 +108,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     --comment: can be called/written multiple times in one run.
 
   NoiseChisel:
-    Many of the changes below are because NoiseChisel doesn't do
-    segmentation any more.
+    From this release, NoiseChisel is only in charge of detection and won't
+    do segmentation any more. The new Segment program is in charge of
+    segmentation. Many of the changes below are due to this new limited
+    scope of NoiseChisel.
     --kernel: value `none' will disable convolution.
     - Renamed options:
       --convolvedhdu ==> --chdu
@@ -107,6 +119,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
       --detsnminarea ==> --snminarea
       --checkdetsn   ==> --checksn
       --detquant     ==> --snquant
+    - By default the detection map is a binary image (values of 0 or 1).
+    - With no output name, the output has a `_detected.fits' suffix.
 
   MakeCatalog:
     - Estimation of noise-level is now done per-pixel over the whole
