Function to label holes in a binary image
This commit started with a testing a possible new strategy to fill holes in
NoiseChisel (during the growth of detections, using their S/N instead of
area). It was thus necessary to label the holes and
`gal_binary_holes_label' was written.

During the test, I also noticed that the `gal_data_ptr_dist' function name
was confusing (the "pointer-distance" count be interpretted as the
byte-base difference). The function is now named `gal_data_num_between' to
be more clear that it returns the number of elements between the pointers
in the type of the dataset.

Ultimate, the test didn't give good results: the S/N in the holes of the
diffuse regions have too much scatter to be meaningful. So the minor
function name change and new function will remain in the library, but
NoiseChisel still works as it did before.

--- a/NEWS
+++ b/NEWS
@@ -68,6 +68,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     gal_array_read_to_type: similar to `gal_array_read', but to given type.
     gal_array_read_one_ch: Read in the data and make sure it is in one channel.
     gal_array_read_one_ch_to_type: Make sure input is in one channel and type.
+    gal_binary_label_holes: label the holes within the foreground.
     gal_blank_is: check to see if argument is blank in its type or not.
     gal_eps_name_is_eps: Returns 1 if given filename is EPS.
     gal_eps_suffix_is_eps: Returns 1 if given suffix is EPS.
@@ -145,6 +146,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
     gal_statistics_number: the output dataset now has a `size_t' type. Until
         now it was `uint64_t'.
+
+  Library:
+    - gal_binary_holes_fill: new name for `gal_binary_fill_holes'.
+    - gal_data_num_between: new name for `gal_data_ptr_dist'.
 
 ** Bug fixes
 
